--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
